test/functions/ferguson/ref-return-intent-ambigous-ref.good
ref-return-intent-ambigous-ref.chpl:17: error: ambiguous call 'access()'
ref-return-intent-ambigous-ref.chpl:4: note: candidates are: access(arg = 4)
ref-return-intent-ambigous-ref.chpl:9: note:                 access()
